# DronePrinting

./: .gitmodules  .rosinstall  .rosinstall.bak  Jetson_Installation.txt
PX4 Configuration/: 22021_gazebo-classic_wasp  CMakeLists.txt
PixHawkParams/: Testing_LiPo_Batteries_Dec-06-23.param
wasp_description/: CMakeLists.txt  package.xml
wasp_description/config/: camchain-imucam-wasp.yaml
wasp_description/include/wasp_description/: Extruder.h  MissionServer.h  SetpointControl.h  VIOInterface.h  WaspUtils.h
wasp_description/launch/: camera.launch  drone.launch  image_processor.launch  offboard.launch  px4.launch  server.launch  sim-control.launch  vio.launch
wasp_description/res/: Walls.blend  t1.gcode  t2.gcode
wasp_description/rviz/: rviz_wasp_config.rviz
wasp_description/scripts/: setup.sh
wasp_description/src/: Extruder.cpp  MissionServer.cpp  SetpointControl.cpp  SetpointControl.h  VIOInterface.cpp  extruder.cpp  mission_server.cpp  mission_test.cpp
wasp_description/srv/: NextPose.srv  RequestMission.srv
wasp_gazebo/: CMakeLists.txt  package.xml
wasp_gazebo/launch/: camera.launch  drone.launch  extrusion_demo.launch  gazebo.launch  hitl.launch  rtab.launch  sim.launch  sitl.launch  test.launch
wasp_gazebo/meshes/: WASP_ARM.dae  WASP_CANNISTER.dae  WASP_MOTOR.dae  WASP_NOZZLE.dae  wasp_arm.dae  wasp_support_rod.dae
wasp_gazebo/scripts/: setup.sh
wasp_gazebo/src/: FoamBuildPlugin.cpp  FoamBuildPlugin.hh
wasp_gazebo/urdf/: drone.gazebo.xacro  drone.sdf  drone.urdf  drone.urdf.xacro  frame.xacro  wasp.sdf
wasp_gazebo/worlds/: empty.world  extrusion_demo.world  foamtest.world  wasp.world  wasp_demo.world  (+1 more)
(+15 files in other folders)
